--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
       <!-- Header -->
       {{ partial "header" . }}
       <div class="container">
-        <h3>Level-Up</h3>
+        <h3 class="blog-post">Level-Up</h3>
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="list level-up">
