--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,7 @@ body {
   font-family: "Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif;
   font-style: normal;
   letter-spacing: -0.018em;
+  margin-top: 50px;
 }
 .blogpost a {
   cursor: pointer;
@@ -195,6 +196,9 @@ body {
 .blogpost a:hover {
   color: #00c0aa;
   text-decoration: underline;
+}
+figcaption h6 {
+  margin-top: 5px !important;
 }
 .related-posts h6 {
   text-align: center;
@@ -208,19 +212,19 @@ body {
   line-height: 0.4;
   font-size: 18px;
 }
-.list.level-up h3, .list.level-up h4, .list.level-up h5 {
+.list.level-up h3, .list.level-up h4, .list.level-up h5, .list.talks h3, .list.talks h4, .list.talks h5 {
   color: #27A822;
   margin-bottom: 20px;
 }
-.list.level-up ul {
+.list.level-up ul, .list.talks ul {
   list-style: none;
   margin-top: 10px;
 }
-.list.level-up a, .list.level-up em {
+.list.level-up a, .list.level-up em, .list.talks a, .list.talks em {
   color: #6b6b6b;
   cursor: pointer;
 }
-.list.level-up em {
+.list.level-up em, .list.talks em {
   font-size: 14px;
 }
 .blogpost figure {
@@ -352,6 +356,9 @@ body {
 .fold.content-success {
   border-left-color: #27a822;
 }
+.talk .fold :not(.content) {
+  padding-bottom: 20px;
+}
 .scroll-to-top {
   display: none;
   position: fixed; bottom: 30px; right: 50px;
@@ -387,6 +394,24 @@ body {
   image-rendering: -webkit-optimize-contrast;
   image-rendering: pixelated;
   -ms-interpolation-mode: nearest-neighbor;
+}
+.twitter-tweet {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  margin-left: 150px !important;
+}
+@media (max-width: 767px) {
+  .twitter-tweet {
+    margin-left: 50px !important;
+  }
+}
+@media (max-width: 567px) {
+  .twitter-tweet {
+    margin-left: 0px !important;
+  }
+}
+.klipse-container {
+  margin-bottom: 20px;
 }
 
 /* Footer
